# otel-arrow-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  licenserc.toml
.github/workflows/: rust.yml
src/: arrays.rs  decode.rs  error.rs  lib.rs  opentelemetry.proto.experimental.arrow.v1.rs  otlp.rs  schema.rs  test_util.rs
src/decode/: decoder.rs  record_message.rs  related_data.rs
src/otlp/: attribute_decoder.rs  attribute_store.rs  attributes.rs  data_point_store.rs  data_points.rs  e_hostograms.rs  exemplar.rs  histogram_data_points.rs  metric.rs  num_data_points.rs  number_data_points.rs  related_data.rs  summary_data_points.rs
src/otlp/attributes/: attribute_store.rs  parent_id.rs
src/otlp/data_points/: exp_histogram.rs  histogram.rs  number.rs  summary.rs
src/schema/: consts.rs
