[package]
name = "otel-arrow-proto"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["client", "server", "trace"]
client = []
server = []
trace = []

[dependencies]
arrow = "53"
lazy_static = "1.5"
num_enum = "0.7"
opentelemetry-proto = "0.26"
paste = "1.0"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.8" }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
